--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Romische-Geschichte-Band-1_3060
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -31,5 +31,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Rome -- History'
 - !lcc 'DG'
+- GITenberg
 title: Römische Geschichte — Band 1
 url: http://www.gutenberg.org/ebooks/3060
